# nightreign-overlay-helper

./: .gitignore  CLAUDE.md  GOLANG_PROGRESS.md  README.md  TEST_REPORT.md  go.mod  go.sum  pyproject.toml  test_map_detector.py
.specify/memory/: constitution.md
cmd/app/: main.go
data/test/day_detector/: README.md
data/test/map_detector/: README.md
docs/: OCR_SETUP.md  OCR_STATUS.md  OCR_USAGE.md  PERFORMANCE.md
internal/config/: config.go  loader.go
internal/detector/: base.go  circle_detect.go  circle_detect_test.go  day_detector.go  day_detector_test.go  map_detector.go  map_detector_real_test.go  map_detector_test.go  map_info.go  map_region.go  map_region_test.go  ocr.go  ocr_stub.go  utils.go
internal/logger/: logger.go
internal/updater/: updater.go
pkg/screenshot/: screenshot.go  screenshot_test.go
pkg/utils/: path.go  time.go  yaml.go
pkg/version/: version.go
scripts/: ci_version.py
specs/001-app-singleton/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-app-singleton/checklists/: requirements.md
specs/001-remove-pywin32-dependency/: plan.md  research.md  spec.md  tasks.md
specs/001-remove-pywin32-dependency/checklists/: requirements.md
specs/002-single-instance/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-single-instance/checklists/: requirements.md
src/: app.py  single_instance.py
src/detector/: map_detector.py
src/ui/: hp_overlay.py  map_overlay.py  overlay.py  utils.py
tests/: conftest.py  test_imports.py  test_single_instance.py  test_utils.py
