[project]
name = "nightreign-overlay-helper"
version = "0.10.2"


description = "Nightreign Overlay Helper is a utility program developed with PyQt6, designed to display various useful information and features while playing the game."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mss>=10",
    "numpy>=2",
    "opencv-python>=4",
    "pillow>=12",
    "platformdirs>=4",
    "pygame>=2",
    "pyinstaller>=6",
    "pynput>=1",
    "pyqt6>=6",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true
